Fixing an overflow

--- a/100/stylesheets/shim.css
+++ b/100/stylesheets/shim.css
@@ -4,3 +4,4 @@ body,
 { width: 100%; min-height: 100%; }
 #root > section > .pane-col { overflow-y: scroll; }
 #root > section > .pane-col > ul { height: 100%; }
+#lightbox > ul > li.c-white-bg { overflow: hidden; }
